<resources>
    <string name="app_name">My Recipes</string>

    <string name="recipes_fragment">Recipes</string>
    <string name="favorite_recipes_fragment">Favorite Recipes</string>
    <string name="filter">Filter</string>

    // Bottom Sheet
    <string name="meal_type">Meal Type</string>
    <string name="main_course">Main Course</string>
    <string name="side_dish">Side Dish</string>
    <string name="dessert">Dessert</string>
    <string name="appetizer">Appetizer</string>
    <string name="salad">Salad</string>
    <string name="bread">Bread</string>
    <string name="breakfast">Breakfast</string>
    <string name="soup">Soup</string>
    <string name="beverage">Beverage</string>
    <string name="sauce">Sauce</string>
    <string name="marinade">Marinade</string>
    <string name="fingerfood">FingerFood</string>
    <string name="snack">Snack</string>
    <string name="drink">Drink</string>
    <string name="gluten_free">Gluten Free</string>
    <string name="ketogenic">Ketogenic</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="vegan">Vegan</string>
    <string name="pescetarian">Pescetarian</string>
    <string name="paleo">Paleo</string>
    <string name="primal">Primal</string>
    <string name="whole30">Whole30</string>
    <string name="diet_type">Diet Type</string>
    <string name="apply">Apply</string>
    <string name="search">Search</string>
    <string name="healthy">Healthy</string>
    <string name="dairy_free">Dairy Free</string>
    <string name="likes">Likes</string>
    <string name="time">Time</string>
    <string name="main_image">Main Image</string>
    <string name="cheap">Cheap</string>
    <string name="ingredient_image">Ingredient Image</string>
    <string name="time_needed">Time Needed</string>
    <string name="number_of_likes">Number Of Likes</string>
    <string name="recipe_image">Recipe Image</string>
    <string name="save_to_favorites">Save to Favorites</string>
    <string name="no_favorite_recipes_found">No Favorite Recipes Found</string>

</resources>