<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.overview.OverviewFragment">


    <ImageView
        android:id="@+id/main_imageView"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:contentDescription="@string/main_image"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <View
        android:id="@+id/gradient_overlay"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:background="@drawable/overview_gradient_overlay"
        app:layout_constraintBottom_toBottomOf="@+id/main_imageView"
        app:layout_constraintEnd_toEndOf="@+id/main_imageView"
        app:layout_constraintStart_toStartOf="@id/main_imageView"
        app:layout_constraintTop_toTopOf="@id/main_imageView"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/time_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="12dp"
        tools:text="100"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/main_imageView"
        app:layout_constraintEnd_toEndOf="@id/main_imageView" />

    <ImageView
        android:id="@+id/time_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/time"
        android:src="@drawable/ic_clock"
        app:layout_constraintBottom_toTopOf="@id/time_textView"
        app:layout_constraintEnd_toEndOf="@id/time_textView"
        app:layout_constraintStart_toStartOf="@id/time_textView"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/likes_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="12dp"
        tools:text="50"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/main_imageView"
        app:layout_constraintEnd_toStartOf="@id/time_textView" />

    <ImageView
        android:id="@+id/likes_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/likes"
        android:src="@drawable/ic_heart"
        app:layout_constraintBottom_toTopOf="@id/likes_textView"
        app:layout_constraintEnd_toEndOf="@id/likes_textView"
        app:layout_constraintStart_toStartOf="@id/likes_textView"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/title_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/courgette"
        tools:text="Title"
        android:textColor="@color/darkGray"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_imageView" />

    <ImageView
        android:id="@+id/vegetarian_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/vegetarian"
        android:src="@drawable/ic_checkmark"
        app:layout_constraintStart_toStartOf="@+id/title_textView"
        app:layout_constraintTop_toBottomOf="@+id/title_textView"
        app:tint="@color/darkGray" />

    <TextView
        android:id="@+id/vegetarian_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/vegetarian"
        android:textColor="@color/darkGray"
        app:layout_constraintBottom_toBottomOf="@+id/vegetarian_imageView"
        app:layout_constraintStart_toEndOf="@+id/vegetarian_imageView"
        app:layout_constraintTop_toTopOf="@+id/vegetarian_imageView" />

    <ImageView
        android:id="@+id/vegan_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/vegan"
        android:src="@drawable/ic_checkmark"
        app:layout_constraintStart_toStartOf="@+id/vegetarian_imageView"
        app:layout_constraintTop_toBottomOf="@+id/vegetarian_imageView"
        app:tint="@color/darkGray" />

    <TextView
        android:id="@+id/vegan_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/vegan"
        android:textColor="@color/darkGray"
        app:layout_constraintBottom_toBottomOf="@+id/vegan_imageView"
        app:layout_constraintStart_toEndOf="@+id/vegan_imageView"
        app:layout_constraintTop_toTopOf="@+id/vegan_imageView" />

    <!--    Second Row-->

    <ImageView
        android:id="@+id/dairyFree_ImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:contentDescription="@string/dairy_free"
        android:src="@drawable/ic_checkmark"
        app:layout_constraintBottom_toBottomOf="@id/vegetarian_textView"
        app:layout_constraintStart_toEndOf="@id/vegetarian_textView"
        app:layout_constraintTop_toTopOf="@+id/vegetarian_textView"
        app:tint="@color/darkGray" />

    <TextView
        android:id="@+id/dairyFree_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/dairy_free"
        android:textColor="@color/darkGray"
        app:layout_constraintBottom_toBottomOf="@+id/dairyFree_ImageView"
        app:layout_constraintStart_toEndOf="@+id/dairyFree_ImageView"
        app:layout_constraintTop_toTopOf="@+id/dairyFree_ImageView" />

    <ImageView
        android:id="@+id/glutenFree_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/gluten_free"
        android:src="@drawable/ic_checkmark"
        app:layout_constraintBottom_toBottomOf="@+id/vegan_textView"
        app:layout_constraintStart_toStartOf="@id/dairyFree_ImageView"
        app:layout_constraintTop_toTopOf="@+id/vegan_textView"
        app:tint="@color/darkGray" />

    <TextView
        android:id="@+id/glutenFree_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/gluten_free"
        android:textColor="@color/darkGray"
        app:layout_constraintBottom_toBottomOf="@+id/glutenFree_imageView"
        app:layout_constraintStart_toEndOf="@+id/glutenFree_imageView"
        app:layout_constraintTop_toTopOf="@+id/glutenFree_imageView" />

    <!--    Third Row-->

    <ImageView
        android:id="@+id/healthy_ImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:contentDescription="@string/healthy"
        android:src="@drawable/ic_checkmark"
        app:layout_constraintBottom_toBottomOf="@id/dairyFree_textView"
        app:layout_constraintStart_toEndOf="@id/dairyFree_textView"
        app:layout_constraintTop_toTopOf="@+id/dairyFree_textView"
        app:tint="@color/darkGray" />

    <TextView
        android:id="@+id/healthy_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/healthy"
        android:textColor="@color/darkGray"
        app:layout_constraintBottom_toBottomOf="@+id/healthy_ImageView"
        app:layout_constraintStart_toEndOf="@+id/healthy_ImageView"
        app:layout_constraintTop_toTopOf="@+id/healthy_ImageView" />

    <ImageView
        android:id="@+id/cheap_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/gluten_free"
        android:src="@drawable/ic_checkmark"
        app:layout_constraintBottom_toBottomOf="@+id/glutenFree_textView"
        app:layout_constraintStart_toStartOf="@id/healthy_ImageView"
        app:layout_constraintTop_toTopOf="@+id/glutenFree_textView"
        app:tint="@color/darkGray" />

    <TextView
        android:id="@+id/cheap_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/cheap"
        android:textColor="@color/darkGray"
        app:layout_constraintBottom_toBottomOf="@+id/cheap_imageView"
        app:layout_constraintStart_toEndOf="@+id/cheap_imageView"
        app:layout_constraintTop_toTopOf="@+id/cheap_imageView" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/glutenFree_imageView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/summary_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Loren Ipsum"
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>